--- a/models/scene_classification/requirements.txt
+++ b/models/scene_classification/requirements.txt
@@ -1,5 +1,7 @@
 numpy==1.24.1
+scipy==1.11.1
 pandas==2.0.2
 opencv_python==4.7.0.72
 opencv_python_headless==4.7.0.72
-tensorflow-cpu==2.12.0
+opencv-contrib-python==4.7.0.72
+
