copy data (scene images)

--- a/models/camera/Dockerfile
+++ b/models/camera/Dockerfile
@@ -7,6 +7,9 @@ LABEL email="mario.senden@maastrichtuniversity.nl"
 # Set the working directory
 WORKDIR /usr/src
 
+# Create the data directory
+RUN mkdir -p /usr/data
+
 # Copy the requirements file
 COPY requirements.txt .
 
@@ -16,6 +19,9 @@ RUN apt-get update && apt-get install -y python3-pip \
 
 # Copy the source code
 COPY src/ .
+
+# Copy the data
+COPY data/ /usr/data
 
 # Start the camera node
 RUN chmod +x run.sh
