--- a/models/saliency/Dockerfile
+++ b/models/saliency/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official ROS2 base image as the base image
-FROM osrf/ros:humble-desktop
+FROM osrf/ros:foxy-desktop
 
 LABEL author="Mario Senden"
 LABEL email="mario.senden@maastrichtuniversity.nl"
