--- a/config/simulation_configuration.json
+++ b/config/simulation_configuration.json
@@ -1,6 +1,6 @@
 {
     "num_nodes": 5,
     "time_step": 0.042,
-    "viewing_time": 10.0,
-    "scene": "office"
+    "viewing_time": 6.0,
+    "scene": "auditorium"
 }
